// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterButton: is clickable should match snapshot when is clickable and is selected character 1`] = `
<DocumentFragment>
  .c0.c0 {
  padding: 0.1875rem;
  overflow-anchor: none;
  font-size: 0.875rem;
  font-family: "AzoSansMedium";
  font-weight: 500;
  color: #000000;
  cursor: pointer;
}

.c0.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<button
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover c0 MuiLink-button MuiTypography-colorPrimary"
    data-testid="character-link-test-button"
  >
    TEST BUTTON
  </button>
</DocumentFragment>
`;

exports[`FilterButton: is clickable should match snapshot when is clickable and not selected character 1`] = `
<DocumentFragment>
  .c0.c0 {
  padding: 0.1875rem;
  overflow-anchor: none;
  font-size: 0.875rem;
  font-family: "AzoSansMedium";
  font-weight: 500;
  color: #257f39;
  cursor: pointer;
}

.c0.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<button
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover c0 MuiLink-button MuiTypography-colorPrimary"
    data-testid="character-link-test-button"
  >
    TEST BUTTON
  </button>
</DocumentFragment>
`;

exports[`FilterButton: is not clickable should match snapshot when not clickable 1`] = `
<DocumentFragment>
  .c0.c0 {
  padding: 0.1875rem;
  overflow-anchor: none;
  font-size: 0.875rem;
  font-family: "AzoSansMedium";
  font-weight: 500;
  color: #c5c5c5;
  cursor: default;
}

.c0.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover c0 MuiLink-button MuiTypography-colorPrimary"
    data-testid="character-link-test-button"
    disabled=""
  >
    TEST BUTTON
  </button>
</DocumentFragment>
`;
